force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/Rev_Formula_Price_Staging_Table__c.object-meta.xml
<CustomObject>
    <label>Formula Price Staging Table</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Formula Price Staging Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formula Price Staging Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>