force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>