force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Average_currency_rule__c.field-meta.xml
<CustomField>
    <fullName>Average_currency_rule__c</fullName>
    <label>Average currency rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>