force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Base_UOM_Code__c.field-meta.xml
<CustomField>
    <fullName>Base_UOM_Code__c</fullName>
    <label>Base UOM Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>