force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Calculation_exit_for_term_item__c.field-meta.xml
<CustomField>
    <fullName>Calculation_exit_for_term_item__c</fullName>
    <label>Calculation exit for term item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>