force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Calculation_factor_2__c.field-meta.xml
<CustomField>
    <fullName>Calculation_factor_2__c</fullName>
    <label>Calculation factor 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>