force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Calculation_type_formula_condtn_item__c.field-meta.xml
<CustomField>
    <fullName>Calculation_type_formula_condtn_item__c</fullName>
    <label>Calculation type formula condtn item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>