force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Cond_Type__c.field-meta.xml
<CustomField>
    <fullName>Cond_Type__c</fullName>
    <label>Cond Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>