force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Condition_Table_ID__c.field-meta.xml
<CustomField>
    <fullName>Condition_Table_ID__c</fullName>
    <label>Condition Table ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>