force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Condition_Table_Usage__c.field-meta.xml
<CustomField>
    <fullName>Condition_Table_Usage__c</fullName>
    <label>Condition Table Usage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>