force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/condRecordnumber__c.field-meta.xml
<CustomField>
    <fullName>condRecordnumber__c</fullName>
    <label>condRecordnumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>