force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Currency_display_of_calc_formula_rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_display_of_calc_formula_rate__c</fullName>
    <label>Currency display of calc formula rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>