force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Currency_for_formula_condition__c.field-meta.xml
<CustomField>
    <fullName>Currency_for_formula_condition__c</fullName>
    <label>Currency for formula condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>