force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Currency_non_posted_days_rule_exit__c.field-meta.xml
<CustomField>
    <fullName>Currency_non_posted_days_rule_exit__c</fullName>
    <label>Currency non-posted days rule exit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>