force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Currency_time_unit_of_measure_exit__c.field-meta.xml
<CustomField>
    <fullName>Currency_time_unit_of_measure_exit__c</fullName>
    <label>Currency time unit of measure exit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>