force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Currency_weekend_rule_exit__c.field-meta.xml
<CustomField>
    <fullName>Currency_weekend_rule_exit__c</fullName>
    <label>Currency weekend rule exit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>