force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Date_from_fixation_period_for_currency1__c.field-meta.xml
<CustomField>
    <fullName>Date_from_fixation_period_for_currency1__c</fullName>
    <label>Date from fixation period for currency1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>