force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Date_from_for_average_period__c.field-meta.xml
<CustomField>
    <fullName>Date_from_for_average_period__c</fullName>
    <label>Date from for average period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>