force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Date_to_determined_for_fixatn_period__c.field-meta.xml
<CustomField>
    <fullName>Date_to_determined_for_fixatn_period__c</fullName>
    <label>Date to determined for fixatn period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>