force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Days_for_simple_average__c.field-meta.xml
<CustomField>
    <fullName>Days_for_simple_average__c</fullName>
    <label>Days for simple average</label>
    <length>255</length>
    <type>Text</type>
</CustomField>