force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Denomitr_for_convertng_formu_conditn_UoM__c.field-meta.xml
<CustomField>
    <fullName>Denomitr_for_convertng_formu_conditn_UoM__c</fullName>
    <label>Denomitr for convertng formu conditn UoM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>