force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Determination_exit_for_currency_ref__c.field-meta.xml
<CustomField>
    <fullName>Determination_exit_for_currency_ref__c</fullName>
    <label>Determination exit for currency ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>