force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Display_pricing_unit_Formula_Avg_Condt__c.field-meta.xml
<CustomField>
    <fullName>Display_pricing_unit_Formula_Avg_Condt__c</fullName>
    <label>Display pricing unit Formula &amp; Avg Condt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>