force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/End_date_for_currency_period__c.field-meta.xml
<CustomField>
    <fullName>End_date_for_currency_period__c</fullName>
    <label>End date for currency period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>