force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Error_handling_exit_no_exch_rate_found__c.field-meta.xml
<CustomField>
    <fullName>Error_handling_exit_no_exch_rate_found__c</fullName>
    <label>Error handling exit no exch rate found</label>
    <length>255</length>
    <type>Text</type>
</CustomField>