force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Exchange_rate_type__c.field-meta.xml
<CustomField>
    <fullName>Exchange_rate_type__c</fullName>
    <label>Exchange rate type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>