force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Exclude_Base_Date_for_Currency__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Base_Date_for_Currency__c</fullName>
    <label>Exclude Base Date for Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>