force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Factory_calendar_ID_for_currency__c.field-meta.xml
<CustomField>
    <fullName>Factory_calendar_ID_for_currency__c</fullName>
    <label>Factory calendar ID for currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>