force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Formula_description__c.field-meta.xml
<CustomField>
    <fullName>Formula_description__c</fullName>
    <label>Formula description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>