force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Formula_evaluation_status__c.field-meta.xml
<CustomField>
    <fullName>Formula_evaluation_status__c</fullName>
    <label>Formula evaluation status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>