force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Formula_provisional_final_indicator1__c.field-meta.xml
<CustomField>
    <fullName>Formula_provisional_final_indicator1__c</fullName>
    <label>Formula provisional/final indicator1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>