force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Formula_term_item_number__c.field-meta.xml
<CustomField>
    <fullName>Formula_term_item_number__c</fullName>
    <label>Formula term item number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>