force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Gross_net_pricing_strategy_used_quotatn__c.field-meta.xml
<CustomField>
    <fullName>Gross_net_pricing_strategy_used_quotatn__c</fullName>
    <label>Gross/net pricing strategy used quotatn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>