force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/ID_used_to_identify_gravity_scales__c.field-meta.xml
<CustomField>
    <fullName>ID_used_to_identify_gravity_scales__c</fullName>
    <label>ID used to identify gravity scales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>