force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Indicator_if_F_A_calc_perform_rate_based__c.field-meta.xml
<CustomField>
    <fullName>Indicator_if_F_A_calc_perform_rate_based__c</fullName>
    <label>Indicator if F&amp;A calc perform rate based</label>
    <length>255</length>
    <type>Text</type>
</CustomField>