force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Non_posted_days_rule_exit__c.field-meta.xml
<CustomField>
    <fullName>Non_posted_days_rule_exit__c</fullName>
    <label>Non-posted days rule exit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>