force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Offset_from_reference_date_for_currency__c.field-meta.xml
<CustomField>
    <fullName>Offset_from_reference_date_for_currency__c</fullName>
    <label>Offset from reference date for currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>