force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Override_of_formula_calculation__c.field-meta.xml
<CustomField>
    <fullName>Override_of_formula_calculation__c</fullName>
    <label>Override of formula calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>