force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Period_before_base_date__c.field-meta.xml
<CustomField>
    <fullName>Period_before_base_date__c</fullName>
    <label>Period before base date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>