force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Quotation_average_value__c.field-meta.xml
<CustomField>
    <fullName>Quotation_average_value__c</fullName>
    <label>Quotation average value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>