force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Quotation_group__c.field-meta.xml
<CustomField>
    <fullName>Quotation_group__c</fullName>
    <label>Quotation group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>