force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Quotation_source__c.field-meta.xml
<CustomField>
    <fullName>Quotation_source__c</fullName>
    <label>Quotation source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>