force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Quotation_type__c.field-meta.xml
<CustomField>
    <fullName>Quotation_type__c</fullName>
    <label>Quotation type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>