force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rate_Unit__c</fullName>
    <label>Rate Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>