force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Ref_data_1_for_formula_term_item_calc__c.field-meta.xml
<CustomField>
    <fullName>Ref_data_1_for_formula_term_item_calc__c</fullName>
    <label>Ref data 1 for formula term item calc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>