force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Refinery__c.field-meta.xml
<CustomField>
    <fullName>Refinery__c</fullName>
    <label>Refinery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>