force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Rule_conversion_displayed_of_Formula_UoM__c.field-meta.xml
<CustomField>
    <fullName>Rule_conversion_displayed_of_Formula_UoM__c</fullName>
    <label>Rule conversion displayed of Formula UoM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>