force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Rule_for_rounding_currency_exchange_rate__c.field-meta.xml
<CustomField>
    <fullName>Rule_for_rounding_currency_exchange_rate__c</fullName>
    <label>Rule for rounding currency exchange rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>