force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Rule_for_rounding_surcharge_price_value__c.field-meta.xml
<CustomField>
    <fullName>Rule_for_rounding_surcharge_price_value__c</fullName>
    <label>Rule for rounding surcharge price/value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>