force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Scale_Type__c.field-meta.xml
<CustomField>
    <fullName>Scale_Type__c</fullName>
    <label>Scale Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>