force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Sequence_No__c</fullName>
    <label>Sequence No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>