force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>