force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Surcharge__c</fullName>
    <label>Surcharge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>