force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Surcharge_currency__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_currency__c</fullName>
    <label>Surcharge currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>