force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Surcharge_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_per_unit__c</fullName>
    <label>Surcharge per unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>