force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Surcharge_unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_unit_of_measure__c</fullName>
    <label>Surcharge unit of measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>