force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Surcharge_value_for_formula_term_item__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_value_for_formula_term_item__c</fullName>
    <label>Surcharge value for formula term item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>