force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Term_item_value__c.field-meta.xml
<CustomField>
    <fullName>Term_item_value__c</fullName>
    <label>Term item value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>