force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Term_status__c.field-meta.xml
<CustomField>
    <fullName>Term_status__c</fullName>
    <label>Term status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>