force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Time_unit_of_measure_exit__c.field-meta.xml
<CustomField>
    <fullName>Time_unit_of_measure_exit__c</fullName>
    <label>Time unit of measure exit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>