force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/UoM_ref_data_1_in_formula_term_item_calc__c.field-meta.xml
<CustomField>
    <fullName>UoM_ref_data_1_in_formula_term_item_calc__c</fullName>
    <label>UoM ref data 1 in formula term item calc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>