force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/User_exit_for_reference_date_determinatn__c.field-meta.xml
<CustomField>
    <fullName>User_exit_for_reference_date_determinatn__c</fullName>
    <label>User exit for reference date determinatn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>