force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/fields/Weekend_rule_exit__c.field-meta.xml
<CustomField>
    <fullName>Weekend_rule_exit__c</fullName>
    <label>Weekend rule exit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>