force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>condRecordnumber__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Error__c</columns>
    <columns>Surcharge__c</columns>
    <columns>Sequence_No__c</columns>
    <columns>Key_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>