force-app/main/default/objects/Rev_Formula_Price_Staging_Table__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>condRecordnumber__c</columns>
    <columns>Error__c</columns>
    <columns>Surcharge__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>